--- a/simpleapi/package.json
+++ b/simpleapi/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun run index.ts --watch"
+    "dev": "bun --watch run index.ts"
   },
   "devDependencies": {
     "@types/bun": "^1.3.5",
